# mobile_app_backend

./: .credo.exs  .envrc.template  .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  env.example  envrc.example  envrc.template  mix.exs  renovate.json  station-accessibility.livemd
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy-dev-orange.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  route-branching.yml  trivial-load-test.yml  zizmor.yml
assets/: tailwind.config.js
assets/css/: app.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
coverage/: lcov.info
lib/: cldr.ex  client_config.ex  map_friendly_route_shape.ex  mbta_v3_api.ex  mobile_app_backend.ex  mobile_app_backend_web.ex  open_trip_planner_client.ex  presentation_strings.ex  route_segment.ex  route_segment_boundaries.ex  util.ex
lib/mbta_v3_api/: alert.ex  facility.ex  headers.ex  json_api.ex  line.ex  mbta_v3_api.ex  prediction.ex  repo_cache.ex  repository.ex  repository_cache.ex  response_cache.ex  route.ex  route_pattern.ex  schedule.ex  service.ex  shape.ex  stop.ex  store.ex  supervisor.ex  trip.ex  vehicle.ex
lib/mobile_app_backend/: app_check_guardian.ex  application.ex  cldr.ex  client_config.ex  finch_pool_health.ex  finch_telemetry_handler.ex  get_text.ex  http.ex  (+16 more)
load_testing/: .tool-versions  README.md  locustfile.py  phoenix_channel.py  pyproject.toml
test/: map_friendly_route_shape_test.exs  open_trip_planner_client_test.exs  route_segment_test.exs  support_data_test.exs  test_helper.exs
(+383 files in other folders)
