[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
locust = "^2.44.1"
websockets = "^16.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.16"
mypy = "^1.17.1"
types-requests = "^2.33.0.20260518"
types-gevent = "^24.11.0.20241221"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
